helmcharts/ingress/qa/ingress-qa-alb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alb-ingress-qa
  namespace: qa
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn:  arn:aws:acm:us-east-1:531546894109:certificate/96482ba6-17bb-41c1-ace3-bc9af4cc4f7e
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/attributes: deletion_protection.enabled=true
spec:
  rules:
    - http:
        paths:
         - path: /*
           backend:
             serviceName: ssl-redirect
             servicePort: use-annotation
         - path: /*
           backend:
             serviceName: keycloak
             servicePort: 80
