helmcharts/ingress/qa/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: ingress-qa
  namespace: qa
spec:
  rules:
  - host: qa.askmyaws.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: keycloak
          servicePort: 80
